[package]
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Work with MVT files"
homepage = "https://github.com/rory/rust-mapbox-vector-tile"
keywords = ["openstreetmap", "osm", "vector-tiles", "geo"]
license = "AGPL-3.0"
name = "mapbox_vector_tile"
repository = "https://github.com/rory/rust-mapbox-vector-tile"
version = "0.4.0"
edition = "2021"
rust-version = "1.58"
build = "build.rs"

[dependencies]
failure = "0.1.1"
flate2 = "1.0.1"
geo = "0.23"
protobuf = "3.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
slippy-map-tiles = "0.16"

[build-dependencies]
protobuf-codegen = "3.2"
